# devhaven

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test-app.sh  tsconfig.json  tsconfig.node.json  tsconfig.web.json  unocss.config.ts  vite.config.ts
.beads/: issues.jsonl
.claude/: settings.local.json
.codelf/: _changelog.md  attention.md  project.md
.cursor/rules/: my.mdc
.github/workflows/: build.yml  release.yml
db/: schema.js
docs/: terminal-themes.md
docs/releases/: v2.5.0.md
electron/: main.js  server.js
plugin/: README.md  intellij-idea-plugin.md  vs-code-plugin.md
public/mascot/: README.md
src/: App.css  App.tsx  App.vue  global.d.ts  index.html  main.js  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  monitor.json  terminal.json
src-tauri/src/: codex_monitor.rs  codex_sessions.rs  filesystem.rs  git_daily.rs  git_ops.rs  lib.rs  main.rs  markdown.rs  models.rs  notes.rs  project_loader.rs  storage.rs  system.rs  terminal.rs  time_utils.rs  worktree_init.rs  worktree_setup.rs
src/components/: CodexSessionSection.tsx  DashboardModal.tsx  DetailPanel.tsx  DropdownMenu.tsx  Heatmap.tsx  Icons.tsx  InteractionLockOverlay.tsx  MainContent.tsx  MonitorWindow.tsx  ProjectCard.tsx  ProjectDialog.vue  ProjectList.vue  ProjectListRow.tsx  ProjectMarkdownSection.tsx  ProjectScriptDialog.tsx  RecycleBinModal.tsx  SearchBar.tsx  SettingsDialog.vue  SettingsModal.tsx  Sidebar.tsx  Sidebar.vue  TabBar.tsx  TagEditDialog.tsx  TerminalPanel.tsx  WorkspaceView.tsx  XtermTerminal.tsx
src/devhaven/: app.py  (+3 more)
(+234 files in other folders)
