[project]
name = "devhaven"
version = "0.1.0"
description = "TUI project manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.65.0",
  "textual-terminal>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[project.scripts]
devhaven = "devhaven.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
